# playnow

./: .gitignore  Cargo.toml  postgres_setup.sql
core/: Cargo.toml
core/src/: backend.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: cron.rs  main.rs
playnow_core/: Cargo.toml
playnow_core/src/: backend.rs  lib.rs  wshandler.rs
playnow_daemon/: Cargo.toml
playnow_daemon/src/: cron.rs  main.rs  wshandler.rs
playnow_daemon/src/webapi/: mod.rs
playnow_web/: Cargo.toml
playnow_web/src/: main.rs  prefs.rs
playnow_web/templates/: base.hbs
src/: db.rs  login.rs  main.rs  prefs.rs
static/css/: styles.css
templates/: base.hbs  display_prefs.hbs  index.hbs  login.hbs
web/: Cargo.toml
web/src/: main.rs
