[package]
name = "playnow"
version = "0.1.0"
authors = ["XMPPwocky <nttheis@gmail.com>"]

[dependencies]
iron = "0.2.2"
logger = "0.0.3"
router = "0.0.15"
handlebars-iron = "0.8.3"
rustc-serialize= "0.3.15"
log = "0.3.2"
env_logger = "0.3.1"
staticfile = "0.0.6"
mount = "0.0.9"
cookie = "0.1.0"
tojson_macros = "0.1.3"
urlencoded = "*"
oven = "0.2.15"
"rust-sqlite" = "^0.2.0"
url = "0.2.37"


[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
a                                                                                                                                                                                                                                                                                                                                                                                                                                                   ahaha evil
ohoh

