[package]
name = "playnow_core"
version = "0.1.0"
authors = ["XMPPwocky <nttheis@gmail.com>"]

[dependencies]
hyper = "0.6.13"
serde = "*"
serde_json = "*"
steamwebapi = "~0.4.0"
websocket = "~0.13.1"
quick-error = "~0.1.4"
postgres = "~0.10"
redis = "~0.5.1"
time = "~0.1.33"

r2d2 = "0.6"
[dependencies.r2d2_postgres]
git = "https://github.com/sfackler/r2d2-postgres/"

[dependencies.r2d2_redis]
git = "https://github.com/nevdelap/r2d2-redis/"

[dependencies.steamid]
version = "0.3.0"
features = ["redis-support"]
